# d2to1

./: CHANGES  CHANGES.rst  setup.cfg
d2to1/: util.py
d2to1/tests/: __init__.py  test_core.py
d2to1/tests/testpackage/: setup.cfg  setup.py
d2to1/tests/testpackage/d2to1_testpackage/: version.py
