[metadata]
name = d2to1
version = 0.2.6dev
author = Erik M. Bray
author-email = embray@stsci.edu
summary = Allows using distutils2-like setup.cfg files for a package's metadata
 with a distribute/setuptools setup.py
description-file =
    README
    CHANGES
home-page = http://pypi.python.org/pypi/d2to1
requires-dist = setuptools
classifier =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Framework :: Setuptools Plugin
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Packaging

[files]
packages = d2to1
